# tiny_orm

./: .gitignore  .pre-commit-config.yaml  .vscode  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  publish.yaml
examples/: .gitignore
examples/mysql/: README.md  main.rs
examples/mysql/migrations/: 20241029111257_todo.sql  20241029111257_todos.sql
examples/postgres/: Cargo.toml  README.md  main.rs
examples/postgres-soft-deletion/: README.md  main.rs
examples/postgres-soft-deletion/migrations/: 20241029111257_todo.sql
examples/postgres/migrations/: 20241029111257_todo.sql  20241029111257_todos.sql
examples/postgres/real_life/: Cargo.toml  README.md
examples/postgres/real_life/migrations/: 20241029111257_todos.sql
examples/postgres/real_life/src/: main.rs
examples/postgres/src/: main.rs
examples/sqlite/: Cargo.toml  README.md  main.rs  simple.db  simple.db-shm  simple.db-wal
examples/sqlite-setoption/: README.md  main.rs
examples/sqlite-soft-deletion/: README.md  main.rs
examples/sqlite-soft-deletion/migrations/: 20241029111257_todo.sql
examples/sqlite/migrations/: 20241029111257_todo.sql  20241029111257_todos.sql
examples/sqlite/simple/: Cargo.toml  README.md
examples/sqlite/simple/migrations/: 20241029111257_todos.sql
examples/sqlite/simple/src/: main.rs
examples/sqlite/src/: main.rs
src/: attr.rs  database.rs  lib.rs  quotes.rs  types.rs
tests/: integration_test.rs
tiny-orm-core/: Cargo.toml
tiny-orm-core/src/: lib.rs
tiny-orm-macros/: Cargo.toml
tiny-orm-macros/src/: attr.rs  database.rs  lib.rs  quotes.rs  types.rs
tiny-orm-model/: Cargo.toml
tiny-orm-model/src/: errors.rs  lib.rs  set_option.rs
