[workspace]
members = ["tiny-orm-core", "tiny-orm-macros"]

[package]
name = "tiny-orm"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.1"
authors = ["Matt Delacour - mdelacour.com"]
description = "A tiny ORM for CRUD operations built on top of SQLx QueryBuilder."
license = "MIT"
repository = "https://github.com/MattDelac/tiny_orm"
documentation = "https://docs.rs/tiny-orm"
keywords = ["sqlx", "query_builder", "orm", "crud", "database"]
categories = ["database"]
readme = "README.md"
exclude = [
    "tests/*",
    "examples/*",
    ".github/*",
]

[dependencies]
sqlx = { version = ">=0.7, <1.0", default-features = false }
tiny-orm-core = { path = "./tiny-orm-core", version = "0.1.0" }
tiny-orm-macros = { path = "./tiny-orm-macros", version = "0.1.0", features = [] }

[features]
default = []
sqlite = ["tiny-orm-macros/sqlite"]
postgres = ["tiny-orm-macros/postgres"]
mysql = ["tiny-orm-macros/mysql"]

[dev-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "derive"] }
tiny-orm = { path = "." }
tokio = { version = "1.41.0", features = ["rt", "macros"]}
uuid = {version = "1.11.0", features = ["v4"]}
