[package]
name = "tiny-orm"
version = "0.5.1"
edition = "2021"
rust-version = "1.80.0"
authors = ["Matt Delacour - mdelacour.com"]
description = "A tiny ORM for CRUD operations built on top of SQLx QueryBuilder."
license = "MIT"
repository = "https://github.com/MattDelac/tiny_orm"
documentation = "https://docs.rs/tiny-orm"
keywords = ["sqlx", "query_builder", "orm", "crud", "database"]
categories = ["database"]
readme = "README.md"
include = [
    "tiny-orm-macros/**/*.rs",
    "tiny-orm-macros/Cargo.toml",
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[workspace]
members = ["tiny-orm-model", "tiny-orm-macros"]

[dependencies]
tiny-orm-macros = { version = "0.5.1", path = "./tiny-orm-macros", features = [] }
tiny-orm-model = { version = "0.5.1", path = "./tiny-orm-model", features = [] }
sqlx = { version = ">=0.7, <1.0", default-features = false }

[features]
default = ["set-option"]
sqlite = ["sqlx/sqlite", "tiny-orm-macros/sqlite", "tiny-orm-model/sqlite"]
postgres = ["sqlx/postgres", "tiny-orm-macros/postgres", "tiny-orm-model/postgres"]
mysql = ["sqlx/mysql", "tiny-orm-macros/mysql", "tiny-orm-model/mysql"]
"sqlx-0.7" = ["tiny-orm-model/sqlx-0.7"]  # Backward compatibility with sqlx 0.7.*
set-option = ["tiny-orm-model/set-option"]  # To use the SetOption struct which skips fields in the update query when they are NotSet

[package.metadata.docs.rs]
features = ["sqlite"]

[dev-dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "any"] }
tokio = { version = "1.41.0", features = ["rt", "macros"]}
uuid = {version = "1.11.0", features = ["v4"]}
