[package]
name = "tiny-orm-macros"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.1"
authors = ["Matt Delacour - mdelacour.com"]
description = "Macros for Tiny ORM. Not intended to be used directly."
license = "MIT"
repository = "https://github.com/MattDelac/tiny_orm"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "<1.0"

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dev-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "derive"] }
tokio = { version = "1.41.0", features = ["rt", "macros"]}
uuid = {version = "1.11.0", features = ["v4"]}
