[package]
name = "tiny-orm-model"
version = "0.5.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Matt Delacour - mdelacour.com"]
description = "Struct and Trait avaiable for Tiny ORM. Not intended to be used directly."
license = "MIT"
repository = "https://github.com/MattDelac/tiny_orm"

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
"sqlx-0.7" = []
set-option = []

[dependencies]
sqlx = { version = ">=0.7, <1.0", default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
